# sensei

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
src/sensei/: __init__.py  cli.py  config.py  formatter.py  gitlab_client.py  learner.py  reviewer.py
src/setu_review/: cli.py  config.py  formatter.py  gitlab_client.py  learner.py  reviewer.py
tests/: test_cli.py  test_config.py  test_formatter.py  test_gitlab_client.py  test_integration.py  test_learner.py  test_reviewer.py
