[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sensei"
version = "0.1.0"
description = "CLI code review agent for GitLab MRs"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "python-gitlab>=4.0",
    "pyyaml>=6.0",
]

[project.scripts]
sensei = "setu_review.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
